# rtype

./: CMakeLists.txt  README.md
include/ecs/: CollisionSystem.hpp  Component.hpp  ComponentArray.hpp  Entity.hpp  MovementSystem.hpp  Registry.hpp  ShootingSystem.hpp  SpawningSystem.hpp  System.hpp
include/network/: Protocol.hpp  UDPClient.hpp  UDPServer.hpp
include/server/: ServerLogic.hpp
src/client/: ClientMain.cpp
src/ecs/: Registry.cpp
src/network/: Protocol.cpp  UDPClient.cpp  UDPServer.cpp
src/server/: ServerLogic.cpp  ServerMain.cpp
